--- a/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
+++ b/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
@@ -19,18 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv'\n",
+    "df = pd.read_csv(url, sep='\\t')"
    ]
   },
   {
@@ -42,12 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "chipo = df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,12 +72,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "price_converter = lambda x: float(x[1:-1])\n",
+    "chipo['item_price'] = chipo['item_price'].apply(price_converter)\n",
+    "chipo.item_price.dropna(inplace=True)\n",
+    "chipo_filtered = chipo.drop_duplicates(['item_name', 'quantity'])\n",
+    "chipo_filtered = chipo_filtered[chipo_filtered.quantity == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo_filtered[chipo_filtered.item_price > 10].item_name.nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +115,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Izze</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>10.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               item_name  item_price\n",
+       "0           Chips and Fresh Tomato Salsa        2.39\n",
+       "1                                   Izze        3.39\n",
+       "2                       Nantucket Nectar        3.39\n",
+       "3  Chips and Tomatillo-Green Chili Salsa        2.39\n",
+       "5                           Chicken Bowl       10.98"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items_prices = chipo_filtered[['item_name', 'item_price']]\n",
+    "items_prices.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,12 +203,353 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>738</th>\n",
+       "      <td>Veggie Soft Tacos</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1694</th>\n",
+       "      <td>Veggie Salad</td>\n",
+       "      <td>8.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1653</th>\n",
+       "      <td>Veggie Crispy Tacos</td>\n",
+       "      <td>8.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Veggie Burrito</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>Veggie Bowl</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Steak Soft Tacos</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664</th>\n",
+       "      <td>Steak Salad</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Steak Crispy Tacos</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Steak Bowl</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Side of Chips</td>\n",
+       "      <td>1.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1414</th>\n",
+       "      <td>Salad</td>\n",
+       "      <td>7.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Izze</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>Crispy Tacos</td>\n",
+       "      <td>7.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>Chips and Tomatillo-Red Chili Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>Chips and Tomatillo Red Chili Salsa</td>\n",
+       "      <td>2.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Chips and Tomatillo Green Chili Salsa</td>\n",
+       "      <td>2.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>Chips and Roasted Chili-Corn Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>Chips and Roasted Chili Corn Salsa</td>\n",
+       "      <td>2.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>Chips and Mild Fresh Tomato Salsa</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Chips and Guacamole</td>\n",
+       "      <td>4.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Chips</td>\n",
+       "      <td>2.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Chicken Soft Tacos</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>Chicken Salad</td>\n",
+       "      <td>10.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Chicken Crispy Tacos</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Chicken Burrito</td>\n",
+       "      <td>8.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>10.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>Carnitas Soft Tacos</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1132</th>\n",
+       "      <td>Carnitas Salad Bowl</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3750</th>\n",
+       "      <td>Carnitas Salad</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>554</th>\n",
+       "      <td>Carnitas Crispy Tacos</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Carnitas Burrito</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Carnitas Bowl</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Canned Soft Drink</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Canned Soda</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>Burrito</td>\n",
+       "      <td>7.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>673</th>\n",
+       "      <td>Bowl</td>\n",
+       "      <td>7.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Bottled Water</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Barbacoa Soft Tacos</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229</th>\n",
+       "      <td>Barbacoa Salad Bowl</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>Barbacoa Crispy Tacos</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Barbacoa Burrito</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Barbacoa Bowl</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>6 Pack Soft Drink</td>\n",
+       "      <td>6.49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  item_name  item_price\n",
+       "738                       Veggie Soft Tacos       11.25\n",
+       "186                       Veggie Salad Bowl       11.25\n",
+       "1694                           Veggie Salad        8.49\n",
+       "1653                    Veggie Crispy Tacos        8.49\n",
+       "57                           Veggie Burrito       11.25\n",
+       "62                              Veggie Bowl       11.25\n",
+       "8                          Steak Soft Tacos        9.25\n",
+       "606                        Steak Salad Bowl       11.89\n",
+       "664                             Steak Salad        8.99\n",
+       "92                       Steak Crispy Tacos        9.25\n",
+       "7                             Steak Burrito       11.75\n",
+       "54                               Steak Bowl        8.99\n",
+       "6                             Side of Chips        1.69\n",
+       "1414                                  Salad        7.40\n",
+       "2                          Nantucket Nectar        3.39\n",
+       "1                                      Izze        3.39\n",
+       "520                            Crispy Tacos        7.40\n",
+       "300     Chips and Tomatillo-Red Chili Salsa        2.39\n",
+       "3     Chips and Tomatillo-Green Chili Salsa        2.39\n",
+       "111     Chips and Tomatillo Red Chili Salsa        2.95\n",
+       "38    Chips and Tomatillo Green Chili Salsa        2.95\n",
+       "191      Chips and Roasted Chili-Corn Salsa        2.39\n",
+       "233      Chips and Roasted Chili Corn Salsa        2.95\n",
+       "674       Chips and Mild Fresh Tomato Salsa        3.00\n",
+       "10                      Chips and Guacamole        4.45\n",
+       "0              Chips and Fresh Tomato Salsa        2.39\n",
+       "40                                    Chips        2.15\n",
+       "12                       Chicken Soft Tacos        8.75\n",
+       "44                       Chicken Salad Bowl        8.75\n",
+       "250                           Chicken Salad       10.98\n",
+       "11                     Chicken Crispy Tacos        8.75\n",
+       "16                          Chicken Burrito        8.49\n",
+       "5                              Chicken Bowl       10.98\n",
+       "237                     Carnitas Soft Tacos        9.25\n",
+       "1132                    Carnitas Salad Bowl       11.89\n",
+       "3750                         Carnitas Salad        8.99\n",
+       "554                   Carnitas Crispy Tacos        9.25\n",
+       "27                         Carnitas Burrito        8.99\n",
+       "33                            Carnitas Bowl        8.99\n",
+       "263                       Canned Soft Drink        1.25\n",
+       "28                              Canned Soda        1.09\n",
+       "510                                 Burrito        7.40\n",
+       "673                                    Bowl        7.40\n",
+       "34                            Bottled Water        1.09\n",
+       "56                      Barbacoa Soft Tacos        9.25\n",
+       "1229                    Barbacoa Salad Bowl       11.89\n",
+       "168                   Barbacoa Crispy Tacos       11.75\n",
+       "21                         Barbacoa Burrito        8.99\n",
+       "39                            Barbacoa Bowl       11.75\n",
+       "298                       6 Pack Soft Drink        6.49"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items_prices.sort_values(by='item_name', ascending=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,12 +560,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3598    15\n",
+       "Name: quantity, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.sort_values(by='item_price', ascending=False).head(1).quantity"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,12 +590,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo[chipo.item_name == 'Veggie Salad Bowl'].quantity.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,31 +619,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo[(chipo.item_name == 'Canned Soda') & (chipo.quantity > 1)].shape[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
