--- a/05_Merge/Auto_MPG/Exercises.ipynb
+++ b/05_Merge/Auto_MPG/Exercises.ipynb
@@ -20,12 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,12 +46,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "      <th>Unnamed: 13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford torino</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement horsepower  weight  acceleration  model  \\\n",
+       "0  18.0          8           307        130    3504          12.0     70   \n",
+       "1  15.0          8           350        165    3693          11.5     70   \n",
+       "2  18.0          8           318        150    3436          11.0     70   \n",
+       "3  16.0          8           304        150    3433          12.0     70   \n",
+       "4  17.0          8           302        140    3449          10.5     70   \n",
+       "\n",
+       "   origin                        car  Unnamed: 9  Unnamed: 10  Unnamed: 11  \\\n",
+       "0       1  chevrolet chevelle malibu         NaN          NaN          NaN   \n",
+       "1       1          buick skylark 320         NaN          NaN          NaN   \n",
+       "2       1         plymouth satellite         NaN          NaN          NaN   \n",
+       "3       1              amc rebel sst         NaN          NaN          NaN   \n",
+       "4       1                ford torino         NaN          NaN          NaN   \n",
+       "\n",
+       "   Unnamed: 12  Unnamed: 13  \n",
+       "0          NaN          NaN  \n",
+       "1          NaN          NaN  \n",
+       "2          NaN          NaN  \n",
+       "3          NaN          NaN  \n",
+       "4          NaN          NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars1_path = './cars1.csv'\n",
+    "cars2_path = './cars2.csv'\n",
+    "cars1 = pd.read_csv(cars1_path)\n",
+    "cars2 = pd.read_csv(cars2_path)\n",
+    "cars1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,12 +223,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement horsepower  weight  acceleration  model  \\\n",
+       "0  18.0          8           307        130    3504          12.0     70   \n",
+       "1  15.0          8           350        165    3693          11.5     70   \n",
+       "2  18.0          8           318        150    3436          11.0     70   \n",
+       "3  16.0          8           304        150    3433          12.0     70   \n",
+       "4  17.0          8           302        140    3449          10.5     70   \n",
+       "\n",
+       "   origin                        car  \n",
+       "0       1  chevrolet chevelle malibu  \n",
+       "1       1          buick skylark 320  \n",
+       "2       1         plymouth satellite  \n",
+       "3       1              amc rebel sst  \n",
+       "4       1                ford torino  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars1 = cars1.loc[:, ~cars1.columns.str.contains('^Unnamed')]\n",
+    "cars1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198, 200)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars1.shape[0], cars2.shape[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,12 +389,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "398"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars = pd.concat([cars1, cars2])\n",
+    "cars.shape[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +419,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car</th>\n",
+       "      <th>owners</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <td>68044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "      <td>65724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "      <td>69720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "      <td>28723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford torino</td>\n",
+       "      <td>57731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement horsepower  weight  acceleration  model  \\\n",
+       "0  18.0          8           307        130    3504          12.0     70   \n",
+       "1  15.0          8           350        165    3693          11.5     70   \n",
+       "2  18.0          8           318        150    3436          11.0     70   \n",
+       "3  16.0          8           304        150    3433          12.0     70   \n",
+       "4  17.0          8           302        140    3449          10.5     70   \n",
+       "\n",
+       "   origin                        car  owners  \n",
+       "0       1  chevrolet chevelle malibu   68044  \n",
+       "1       1          buick skylark 320   65724  \n",
+       "2       1         plymouth satellite   69720  \n",
+       "3       1              amc rebel sst   28723  \n",
+       "4       1                ford torino   57731  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars['owners'] = np.random.randint(15000, high=73001, size=398)\n",
+    "cars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -134,21 +580,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
