--- a/08_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
+++ b/08_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
@@ -22,12 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,12 +40,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'evolution': ['Ivysaur', 'Charmeleon', 'Wartortle', 'Metapod'],\n",
+       " 'hp': [45, 39, 44, 45],\n",
+       " 'name': ['Bulbasaur', 'Charmander', 'Squirtle', 'Caterpie'],\n",
+       " 'pokedex': ['yes', 'no', 'yes', 'no'],\n",
+       " 'type': ['grass', 'fire', 'water', 'bug']}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict = {\n",
+    "    \"evolution\": [\"Ivysaur\", \"Charmeleon\", \"Wartortle\", \"Metapod\"],\n",
+    "    \"hp\": [45, 39, 44, 45],\n",
+    "    \"name\": [\"Bulbasaur\", \"Charmander\", \"Squirtle\", \"Caterpie\"],\n",
+    "    \"pokedex\": [\"yes\", \"no\", \"yes\", \"no\"],\n",
+    "    \"type\": [\"grass\", \"fire\", \"water\", \"bug\"]\n",
+    "}\n",
+    "dict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,6 +89,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -119,12 +158,15 @@
        "3     Metapod  45    Caterpie      no    bug"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(dict)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,12 +177,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex\n",
+       "0   Bulbasaur  grass  45     Ivysaur     yes\n",
+       "1  Charmander   fire  39  Charmeleon      no\n",
+       "2    Squirtle  water  44   Wartortle     yes\n",
+       "3    Caterpie    bug  45     Metapod      no"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[[\"name\", \"type\", \"hp\", \"evolution\", \"pokedex\"]]\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +274,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>home</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "      <td>office</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>no</td>\n",
+       "      <td>petach-tikva</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex         place\n",
+       "0   Bulbasaur  grass  45     Ivysaur     yes          home\n",
+       "1  Charmander   fire  39  Charmeleon      no        office\n",
+       "2    Squirtle  water  44   Wartortle     yes          park\n",
+       "3    Caterpie    bug  45     Metapod      no  petach-tikva"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"place\"] = [\"home\", \"office\", \"park\", \"petach-tikva\"]\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,12 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name         object\n",
+       "type         object\n",
+       "hp            int64\n",
+       "evolution    object\n",
+       "pokedex      object\n",
+       "place        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,21 +421,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
